tests/baselines/reference/es5ExportEquals.errors.txt
tests/cases/compiler/es5ExportEquals.ts(4,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== tests/cases/compiler/es5ExportEquals.ts (1 errors) ====
    
    export function f() { }
    
    export = f;
    ~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    